# serializer version: 1
# name: TestFormatDeployments.test_format_deployments_json_output[0]
  dict({
    'items': list([
      dict({
        'id': 6935,
        'name': 'uat',
        'type': 'PRODUCTION',
      }),
      dict({
        'id': 6936,
        'name': 'excessive',
        'type': 'PRODUCTION',
      }),
      dict({
        'id': 84915,
        'name': 'ben-test',
        'type': 'PRODUCTION',
      }),
      dict({
        'id': 37,
        'name': 'ecs',
        'type': 'PRODUCTION',
      }),
      dict({
        'id': 6934,
        'name': 'staging',
        'type': 'PRODUCTION',
      }),
      dict({
        'id': 80,
        'name': 'prod',
        'type': 'PRODUCTION',
      }),
    ]),
    'total': 6,
  })
# ---
# name: TestFormatDeployments.test_format_deployments_text_output[0]
  '''
  Name: uat
  ID: 6935
  Type: PRODUCTION
  
  Name: excessive
  ID: 6936
  Type: PRODUCTION
  
  Name: ben-test
  ID: 84915
  Type: PRODUCTION
  
  Name: ecs
  ID: 37
  Type: PRODUCTION
  
  Name: staging
  ID: 6934
  Type: PRODUCTION
  
  Name: prod
  ID: 80
  Type: PRODUCTION
  '''
# ---
# name: TestProcessDeploymentsResponse.test_empty_response_processing[0]
  DeploymentList(items=[], total=0)
# ---
# name: TestProcessDeploymentsResponse.test_missing_full_deployments_key[0]
  DeploymentList(items=[], total=0)
# ---
# name: TestProcessDeploymentsResponse.test_response_processing_with_limit[0]
  DeploymentList(items=[Deployment(id=6935, name='uat', type=<DeploymentType.PRODUCTION: 'PRODUCTION'>), Deployment(id=6936, name='excessive', type=<DeploymentType.PRODUCTION: 'PRODUCTION'>), Deployment(id=84915, name='ben-test', type=<DeploymentType.PRODUCTION: 'PRODUCTION'>)], total=3)
# ---
# name: TestProcessDeploymentsResponse.test_successful_response_processing[0]
  DeploymentList(items=[Deployment(id=6935, name='uat', type=<DeploymentType.PRODUCTION: 'PRODUCTION'>), Deployment(id=6936, name='excessive', type=<DeploymentType.PRODUCTION: 'PRODUCTION'>), Deployment(id=84915, name='ben-test', type=<DeploymentType.PRODUCTION: 'PRODUCTION'>), Deployment(id=37, name='ecs', type=<DeploymentType.PRODUCTION: 'PRODUCTION'>), Deployment(id=6934, name='staging', type=<DeploymentType.PRODUCTION: 'PRODUCTION'>), Deployment(id=80, name='prod', type=<DeploymentType.PRODUCTION: 'PRODUCTION'>)], total=6)
# ---
